[metadata]
name = masterthesis
version = 0.0.1
description = Master thesis in NLP
long_description = file: README.md
author = Stig Johan Berggren
author_email = stigjb@gmail.com
classifiers =
  Programming Language :: Python :: 3
  Operating System :: OS Independent

[options]
packages = find:
python_requires = ~= 3.5
install_requires =
  gensim
  ipykernel
  keras
  matplotlib
  numpy
  pandas
  scipy
  scikit-learn
  tensorflow

[options.extras_require]
dev =
  autopep8
  flake8
  flake8-import-order
  mypy
  pytest

[flake8]
max-line-length = 100
import-order-style = google

[pycodestyle]
max-line-length = 100

[mypy]
python_version = 3.5
ignore_missing_imports = True
