[metadata]
name = masterthesis
version = 0.0.1
description = Master thesis in NLP
long_description = file: README.md
author = Stig Johan Berggren
author_email = stigjb@gmail.com
classifiers =
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options]
packages = find:
python_requires = ~= 3.5
install_requires =
  gensim
  ipykernel
  keras
  matplotlib
  numpy
  pandas
  scikit-learn
  scipy
  tensorflow
  tqdm

[options.extras_require]
dev =
  autopep8
  flake8
  flake8-import-order
  mypy
  pytest

[flake8]
application-import-names = masterthesis
exclude = venv
import-order-style = google
max-complexity = 10
max-line-length = 100

[pycodestyle]
max-line-length = 100

[mypy]
ignore_missing_imports = True
python_version = 3.5
